--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,3 +1,52 @@
 .Weather {
   border: 1px solid #dadde1;
+  color: #878787;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 16px;
+  border-radius: 4px;
+}
+
+.Weather form {
+  margin-bottom: 20px;
+}
+
+.Weather h1 {
+  display: block;
+  font-size: 24px;
+  margin: 20px 0 0 0;
+  font-weight: 100;
+  line-height: 29px;
+}
+
+.Weather ul {
+  margin: 0;
+  padding: 0;
+}
+.Weather li {
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 19px;
+  list-style: none;
+}
+
+.Weather img {
+  height: 64px;
+  width: 64px;
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.Weather .temperature {
+  font-weight: 100;
+  color: black;
+  font-size: 64px;
+  line-height: 64px;
+}
+
+.Weather .unit {
+  font-size: 16px;
+  font-weight: 400;
+  position: relative;
+  line-height: 1;
+  top: -32px;
 }
